Fix margin on mobile devices

--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -97,8 +97,8 @@ html {
 /* On narrow device, reduce margins. */
 @media (max-width: 480px) {
   .franklin-content {
-    padding-left: 6%;
-    padding-right: 6%;
+    padding-left: 2%;
+    padding-right: 2%;
   }
 }
 
